src/test/resources/purescript_examples/manual/passing/ImportQualified.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('M1')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n  \n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('trace')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('x')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PsiElement(identifier)('x')
                PsiElement(whitespace)('\n\n')
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ModuleName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('Prelude')
            PsiElement(whitespace)('\n  ')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ModuleName)
          PureASTWrapperElement(Qualified)
            PureASTWrapperElement(ModuleName)
              PsiElement(proper name)('Control')
              PsiElement(.)('.')
            PureASTWrapperElement(ModuleName)
              PsiElement(proper name)('Monad')
              PsiElement(.)('.')
            PsiElement(proper name)('Eff')
            PsiElement(whitespace)('\n  ')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ModuleName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('M1')
            PsiElement(whitespace)('\n  ')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('qualified')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ModuleName)
          PureASTWrapperElement(Qualified)
            PureASTWrapperElement(ModuleName)
              PsiElement(proper name)('Debug')
              PsiElement(.)('.')
            PsiElement(proper name)('Trace')
            PsiElement(whitespace)(' ')
        PsiElement(identifier)('as')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ModuleName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('T')
            PsiElement(whitespace)('\n  \n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('T')
                  PsiElement(.)('.')
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(Parens)
              PsiElement(()('(')
              PureASTWrapperElement(Value)
                PureASTWrapperElement(PrefixValue)
                  PureASTWrapperElement(Var)
                    PureASTWrapperElement(Qualified)
                      PsiElement(identifier)('trace')
                      PsiElement(whitespace)(' ')
                  PureASTWrapperElement(StringLiteral)
                    PsiElement(string)('"Done"')
              PsiElement())(')')
